--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         var d3v4 = window.d3;
         window.d3 = null;
     </script>
-    <script src = "http://d3js.org/d3.v5.min.js"></script>
+    <script src = "https://d3js.org/d3.v5.min.js"></script>
     <script>
         var d3v5 = window.d3;
         window.d3 = null;
